--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <title>Viaggio a Londra</title>
 </head>
 <body>
-    
+    <!-- titolo con prime immagini di Londra -->
+    <header>
+        <h1>Il mio Viaggio a Londra</h1>
+        <img src="img/pexels-bill-emrich-230794-0.jpg" alt="">
+        <img src="img/pexels-bill-emrich-230794-1.jpg" alt="">
+        <img src="img/pexels-bill-emrich-230794-2.jpg" alt="">
+        <hr>
+    </header>
+    <!-- titolo con prime immagini di Londra /-->
 </body>
 </html>
