feat: le mie spese

--- a/index.html
+++ b/index.html
@@ -15,5 +15,46 @@
         <hr>
     </header>
     <!-- titolo con prime immagini di Londra /-->
+    
+    <main>
+          <!-- le mie spese a Londra -->
+        <section>
+           <h2>Le mie spese</h2> 
+           <table>
+             <thead>
+                <tr>
+                    <th>Numero</th>
+                    <th>Descrizione</th>
+                    <th>Costo</th>
+                </tr>
+             </thead>
+             <tbody>
+                <tr>
+                    <td>1</td>
+                    <td>Biglietto Aereo</td>
+                    <td>120.00€</td>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>Biglietto Aereo</td>
+                    <td>120.00€</td>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>Biglietto Aereo</td>
+                    <td>120.00€</td>
+                </tr>
+             </tbody>
+             <tfoot>
+                <tr>
+                    <td colspan="2">Totale</td>
+                    <td>360.00€</td>
+                </tr>
+             </tfoot>
+           </table>
+           <hr>
+        </section>
+        <!-- le mie spese a Londra -->
+    </main>
 </body>
 </html>
