--- a/index.html
+++ b/index.html
@@ -55,6 +55,19 @@
            <hr>
         </section>
         <!-- le mie spese a Londra -->
+
+        <!-- Cose da fare -->
+        <section>
+            <h3>Cosa da fare</h3>
+            <ul>
+                <li>Visitare la Tower of London &cross;</li>
+                <li>Visitare greenwich &check;</li>
+                <li>Ascoltare un artista di strada a Covent Garden &check;</li>
+                <li>Mangiare il tipico Fish and Chips inglese &cross;</li>
+            </ul>
+            <hr>
+        </section>
+         <!-- Cose da fare -->
     </main>
 </body>
 </html>
