feat: info utili

--- a/index.html
+++ b/index.html
@@ -68,6 +68,31 @@
             <hr>
         </section>
          <!-- Cose da fare -->
+
+         <!-- info utili -->
+         <section>
+            <h3>Info utili:</h3>
+            <ol>
+                <li>Numeri utili di emergenza</li>
+                <ul>
+                    <li>999-Emergenza</li>
+                    <li>101-Numero polizia</li>
+                    <li>111-Numero assistenza medica</li>
+                </ul>
+                <li>Hotel</li>
+                <ul>
+                    <li>Nome hotel: Buckingham Palace</li>
+                    <li>Indirizzo hotel: Westminster,London SW1A 1AA, Regno Unito</li>
+                </ul>
+                <li>Aereo</li>
+                <ul>
+                    <li>Volo di andata: YI234X,ore 9:30 da Milano Malpensa</li>
+                    <li>Volo di ritorno: YI236X,ore 18:30 da London Heathrow</li>
+                </ul>
+            </ol>
+            <hr>
+         </section>
+          <!-- info utili -->
     </main>
 </body>
 </html>
