--- a/index.html
+++ b/index.html
@@ -94,5 +94,12 @@
          </section>
           <!-- info utili -->
     </main>
+    <footer>
+        <section>
+            <h3>Le foto</h3>
+            <img src="https://www.abta.com/sites/default/files/styles/large/public/media/uploads/london-400x400-compressor_0.jpg" alt="">
+            <img src="https://imgc.allpostersimages.com/img/posters/evening-tower-bridge-and-river-thames-london_u-L-P2QVZJ0.jpg?artPerspective=n" alt="">
+        </section>
+    </footer>
 </body>
 </html>
