--- a/index.html
+++ b/index.html
@@ -1,58 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Viaggio a Londra</title>
 </head>
+
 <body>
     <!-- titolo con prime immagini di Londra -->
     <header>
         <h1>Il mio Viaggio a Londra</h1>
-        <img src="img/pexels-bill-emrich-230794-0.jpg" alt="">
-        <img src="img/pexels-bill-emrich-230794-1.jpg" alt="">
-        <img src="img/pexels-bill-emrich-230794-2.jpg" alt="">
+        <div>
+            <img src="img/pexels-bill-emrich-230794-0.jpg" alt="">
+            <img src="img/pexels-bill-emrich-230794-1.jpg" alt="">
+            <img src="img/pexels-bill-emrich-230794-2.jpg" alt="">
+        </div>
         <hr>
     </header>
     <!-- titolo con prime immagini di Londra /-->
-    
+
     <main>
-          <!-- le mie spese a Londra -->
+        <!-- le mie spese a Londra -->
         <section>
-           <h2>Le mie spese</h2> 
-           <table>
-             <thead>
-                <tr>
-                    <th>Numero</th>
-                    <th>Descrizione</th>
-                    <th>Costo</th>
-                </tr>
-             </thead>
-             <tbody>
-                <tr>
-                    <td>1</td>
-                    <td>Biglietto Aereo</td>
-                    <td>120.00€</td>
-                </tr>
-                <tr>
-                    <td>1</td>
-                    <td>Biglietto Aereo</td>
-                    <td>120.00€</td>
-                </tr>
-                <tr>
-                    <td>1</td>
-                    <td>Biglietto Aereo</td>
-                    <td>120.00€</td>
-                </tr>
-             </tbody>
-             <tfoot>
-                <tr>
-                    <td colspan="2">Totale</td>
-                    <td>360.00€</td>
-                </tr>
-             </tfoot>
-           </table>
-           <hr>
+            <h2>Le mie spese</h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Numero</th>
+                        <th>Descrizione</th>
+                        <th>Costo</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>1</td>
+                        <td>Biglietto Aereo</td>
+                        <td>120.00€</td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Biglietto Aereo</td>
+                        <td>120.00€</td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Biglietto Aereo</td>
+                        <td>120.00€</td>
+                    </tr>
+                </tbody>
+                <tfoot>
+                    <tr>
+                        <td colspan="2">Totale</td>
+                        <td>360.00€</td>
+                    </tr>
+                </tfoot>
+            </table>
+            <hr>
         </section>
         <!-- le mie spese a Londra -->
 
@@ -67,40 +71,45 @@
             </ul>
             <hr>
         </section>
-         <!-- Cose da fare -->
+        <!-- Cose da fare -->
 
-         <!-- info utili -->
-         <section>
+        <!-- info utili -->
+        <section>
             <h3>Info utili:</h3>
             <ol>
-                <li>Numeri utili di emergenza</li>
-                <ul>
-                    <li>999-Emergenza</li>
-                    <li>101-Numero polizia</li>
-                    <li>111-Numero assistenza medica</li>
-                </ul>
-                <li>Hotel</li>
-                <ul>
-                    <li>Nome hotel: Buckingham Palace</li>
-                    <li>Indirizzo hotel: Westminster,London SW1A 1AA, Regno Unito</li>
-                </ul>
-                <li>Aereo</li>
-                <ul>
-                    <li>Volo di andata: YI234X,ore 9:30 da Milano Malpensa</li>
-                    <li>Volo di ritorno: YI236X,ore 18:30 da London Heathrow</li>
-                </ul>
+                <li>
+                    <span>Numeri utili di emergenza</span>
+                    <ul>
+                        <li><strong>999-</strong>Emergenza</li>
+                        <li><strong>101-</strong>Numero polizia</li>
+                        <li><strong>111-</strong>Numero assistenza medica</li>
+                    </ul>
+                    <span>Hotel</span>
+                    <ul>
+                        <li><strong>Nome hotel:</strong> Buckingham Palace</li>
+                        <li><strong>Indirizzo hotel:</strong> Westminster,London SW1A 1AA, Regno Unito</li>
+                    </ul>
+                    <span>Aereo</span>
+                    <ul>
+                        <li><strong>Volo di andata:</strong> YI234X,ore 9:30 da Milano Malpensa</li>
+                        <li><strong>Volo di ritorno:</strong> YI236X,ore 18:30 da London Heathrow</li>
+                    </ul>
+                </li>
             </ol>
             <hr>
-         </section>
-          <!-- info utili -->
+        </section>
+
+        <!-- info utili -->
     </main>
 
     <footer>
         <!-- le Foto  -->
         <section>
             <h3>Le foto</h3>
-            <img src="https://www.abta.com/sites/default/files/styles/large/public/media/uploads/london-400x400-compressor_0.jpg" alt="">
-            <img src="https://imgc.allpostersimages.com/img/posters/evening-tower-bridge-and-river-thames-london_u-L-P2QVZJ0.jpg?artPerspective=n" alt="">
+            <img src="https://www.abta.com/sites/default/files/styles/large/public/media/uploads/london-400x400-compressor_0.jpg"
+                alt="">
+            <img src="https://imgc.allpostersimages.com/img/posters/evening-tower-bridge-and-river-thames-london_u-L-P2QVZJ0.jpg?artPerspective=n"
+                alt="">
         </section>
         <!-- le Foto  -->
     </footer>
