--- a/index.html
+++ b/index.html
@@ -84,11 +84,15 @@
                         <li><strong>101-</strong>Numero polizia</li>
                         <li><strong>111-</strong>Numero assistenza medica</li>
                     </ul>
+                </li>
+                <li>
                     <span>Hotel</span>
                     <ul>
                         <li><strong>Nome hotel:</strong> Buckingham Palace</li>
                         <li><strong>Indirizzo hotel:</strong> Westminster,London SW1A 1AA, Regno Unito</li>
                     </ul>
+                </li>
+                <li>
                     <span>Aereo</span>
                     <ul>
                         <li><strong>Volo di andata:</strong> YI234X,ore 9:30 da Milano Malpensa</li>
@@ -105,13 +109,18 @@
         <!-- le Foto  -->
         <section>
             <h3>Le foto</h3>
-            <img src="https://www.abta.com/sites/default/files/styles/large/public/media/uploads/london-400x400-compressor_0.jpg"
+            <div>
+                <img src="https://www.abta.com/sites/default/files/styles/large/public/media/uploads/london-400x400-compressor_0.jpg"
+                    alt="">
+                <img src="https://imgc.allpostersimages.com/img/posters/evening-tower-bridge-and-river-thames-london_u-L-P2QVZJ0.jpg?artPerspective=n"
                 alt="">
-            <img src="https://imgc.allpostersimages.com/img/posters/evening-tower-bridge-and-river-thames-london_u-L-P2QVZJ0.jpg?artPerspective=n"
-                alt="">
+            </div>
         </section>
         <!-- le Foto  -->
     </footer>
 </body>
 </html>
+                
+
+
 
